src/core/ozone/gl_helper.cpp
@@ -8,6 +8,32 @@
 
 QT_BEGIN_NAMESPACE
 
+const char *getGLErrorString(uint32_t error)
+{
+    switch (error) {
+    case GL_INVALID_ENUM:
+        return "GL_INVALID_ENUM";
+    case GL_INVALID_VALUE:
+        return "GL_INVALID_VALUE";
+    case GL_INVALID_OPERATION:
+        return "GL_INVALID_OPERATION";
+    case GL_STACK_OVERFLOW_KHR:
+        return "GL_STACK_OVERFLOW_KHR";
+    case GL_STACK_UNDERFLOW_KHR:
+        return "GL_STACK_UNDERFLOW_KHR";
+    case GL_OUT_OF_MEMORY:
+        return "GL_OUT_OF_MEMORY";
+    case GL_INVALID_FRAMEBUFFER_OPERATION:
+        return "GL_INVALID_FRAMEBUFFER_OPERATION";
+    case GL_CONTEXT_LOST_KHR:
+        return "GL_CONTEXT_LOST_KHR";
+    case GL_NO_ERROR:
+        return "GL_NO_ERROR";
+    default:
+        return "UNKNOWN";
+    }
+}
+
 GLHelper::GLExtFunctions::GLExtFunctions()
 {
     QOpenGLContext *context = OzoneUtilQt::getQOpenGLContext();
